Cambios en api php para consulta de datos y frontend para consumir api y mostrar en tablas los registros generados

--- a/Frontend/pruebaTecnicaEdilsonLuna/src/app/components/master-services-component/master-services-component.component.html
+++ b/Frontend/pruebaTecnicaEdilsonLuna/src/app/components/master-services-component/master-services-component.component.html
@@ -1,4 +1,7 @@
-<table>
+<br>
+<h1>Tabla de Maestros</h1>
+<br>
+<table class="tablaListadoMaestro" [cellPadding]="12" [cellSpacing]="12" border="1">
     <thead>
         <tr>
             <th>Código</th>
@@ -6,12 +9,19 @@
             <th>Arma</th>
             <th>Ciudad</th>
             <th>Activo</th>
-            <th>Fecha Inicio</th>
-            <th>Fecha Fin</th>
+            <th>FechaInicio</th>
+            <th>FechaFin</th>
+        </tr>
     </thead>
-    <tbody> 
-        <tr *ngFor="let item of arraDatos">
-            <td>{{item}}</td>
+    <tbody>
+        <tr *ngFor="let maestro of listaMaestros">
+            <th>{{maestro.codigo}}</th>
+            <th>{{maestro.descripcion}}</th>
+            <th>{{maestro.arma}}</th>
+            <th>{{maestro.ciudad}}</th>
+            <th>{{maestro.activo}}</th>
+            <th>{{maestro.fechainicio}}</th>
+            <th>{{maestro.fechafin}}</th>
         </tr>
     </tbody>
 </table>
