--- a/Frontend/pruebaTecnicaEdilsonLuna/src/app/components/master-services-component/master-services-component.component.scss
+++ b/Frontend/pruebaTecnicaEdilsonLuna/src/app/components/master-services-component/master-services-component.component.scss
@@ -11,3 +11,11 @@ th, td {
 th {
   background-color: #f4f4f4;
 }
+
+.mainContainer{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
