--- a/Frontend/pruebaTecnicaEdilsonLuna/src/app/components/services-component/services-component.component.html
+++ b/Frontend/pruebaTecnicaEdilsonLuna/src/app/components/services-component/services-component.component.html
@@ -1,31 +1,40 @@
-<br>
-<h1>Tabla de servicios Derivados</h1>
-<br>
-<table [cellPadding]="12" [cellSpacing]="12" border="1">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Maestro</th>
-            <th>Puesto</th>
-            <th>Fecha Inicio</th>
-            <th>Fecha Final</th>
-            <th>Hora Inicio</th>
-            <th>Hora Final</th>
-            <th>Activo</th>
-            <th>Acciones</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let ServicioDerivado of listaServiciosDerivados">
-            <th>{{ServicioDerivado.id}}</th>
-            <th>{{ServicioDerivado.idmaestro}}</th>
-            <th>{{ServicioDerivado.puesto}}</th>
-            <th>{{ServicioDerivado.fechainicio}}</th>
-            <th>{{ServicioDerivado.fechafin}}</th>
-            <th>{{ServicioDerivado.horainicio}}</th>
-            <th>{{ServicioDerivado.horafin}}</th>
-            <th>{{ServicioDerivado.activo}}</th>
-            <th><button (click)="modificarRegistro(ServicioDerivado.id)">Modificar</button></th>
-        </tr>
-    </tbody>
-</table>
+<div class="mainContainer">
+    <br>
+    <div class="containerTitle">    
+     <h1>Tabla de servicios Derivados</h1>
+     <button class="btn btn-Activar" (click)="irInfoServicio(true,'')">Nuevo Servicio</button>
+    </div>
+    <br>
+    <table [cellPadding]="12" [cellSpacing]="12" border="1">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Maestro</th>
+                <th>Puesto</th>
+                <th>Fecha Inicio</th>
+                <th>Fecha Final</th>
+                <th>Hora Inicio</th>
+                <th>Hora Final</th>
+                <th>Activo</th>
+                <th>Acciones</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let ServicioDerivado of listaServiciosDerivados">
+                <th>{{ServicioDerivado.id}}</th>
+                <th>{{ServicioDerivado.idmaestro}}</th>
+                <th>{{ServicioDerivado.puesto}}</th>
+                <th>{{ServicioDerivado.fechainicio}}</th>
+                <th>{{ServicioDerivado.fechafin}}</th>
+                <th>{{ServicioDerivado.horainicio}}</th>
+                <th>{{ServicioDerivado.horafin}}</th>
+                <th>{{ServicioDerivado.activo}}</th>
+                <th>
+                    <button (click)="modificarRegistro(ServicioDerivado.id)" [disabled]="ServicioDerivado.activo == 'False'" class="btn btn-Modificar">Modificar</button>
+                    <button (click)="confirmaDesactivarServicio(ServicioDerivado.id)" *ngIf="ServicioDerivado.activo == 'True'" class="btn btn-Desactivar">Desactivar</button>
+                    <button (click)="confirmarActivarServicioDerivado(ServicioDerivado.id)" *ngIf="ServicioDerivado.activo == 'False'" class="btn btn-Activar">Activar</button>
+                </th>
+            </tr>
+        </tbody>
+    </table>
+</div>
